--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,19 @@
             <artifactId>java-jwt</artifactId>
             <version>4.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.7.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>7.0.1.Final</version>
+        </dependency>
+
     </dependencies>
 
     <build>
