--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret=1111-2222-3333-4444
